tests/EtaX/EtaX.clone/EtaX.clone.3.1.check
// exitCode: 1   val ys = { val t = scala.collection.mutable.Map(1 -> "foo"); xs.clone } // ?/?/ok
-- [E006] Unbound Identifier Error: /d/shisa/target/tests/EtaX/EtaX.clone/EtaX.clone/EtaX.clone.00.scala:3:63 
3 |  val ys = { val t = scala.collection.mutable.Map(1 -> "foo"); xs.clone } // ?/?/ok
  |                                                               ^^
  |                                                             Not found: xs

Explanation
===========
The identifier for `xs` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `xs` or its declaration has either been
misspelt or if an import is missing.

1 error found
